--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+<style>
+    body {
+        height: 100%;
+        background: linear-gradient(to bottom left, #2c8e0e 20%, #c7f024 100%);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        text-align: center;
+        margin: 60px 250px;
+    }
+</style>
 <body>
-  <main>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-      <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-      <div class="col-md-6 mx-auto">
-        <h1 class="display-4 fw-normal">Punny Web</h1>
-        <div class="mt-4 mb-6">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Gambar</th>
-                <th scope="col">Author</th>
-              </tr>
-            </thead>
-            <tbody id="data"></tbody>
-          </table>
+    <main>
+        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+            <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+            <div class="col-md-6 mx-auto">
+                <h1 class="display-4 fw-normal">Punny Web</h1>
+                <div class="mt-4 mb-6">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Gambar</th>
+                                <th scope="col">Author</th>
+                            </tr>
+                        </thead>
+                        <tbody id="data">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </main>
+    </main>
 </body>
 </html>
